# IA-Haskell

./: IA.cabal  README.md  stack.yaml
src/: Main.hs  NeuralNetwork.hs  Util.hs
