name:                IA
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/IA#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


executable IA
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       NeuralNetwork, Util
  ghc-options:  -rtsopts -Wall -threaded -O2 	
  build-depends:       base >= 4.7 && < 5
                     , random
                     , deepseq >= 1.4
                     , matrix
                     , normaldistribution >= 1.0
